installing sass and prettier with prettier config file

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   },
   "type": "module"
 }
