--- a/native/package.json
+++ b/native/package.json
@@ -30,7 +30,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-secure-store": "~11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
