--- a/native/package.json
+++ b/native/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "expo": "~44.0.2",
     "expo-splash-screen": "~0.14.1",
@@ -30,7 +31,9 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "redux-persist": "^6.0.0"
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "expo-secure-store": "~11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
