--- a/native/package.json
+++ b/native/package.json
@@ -32,7 +32,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "@react-native-picker/picker": "2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
