- rename redux property from toggleEditMode to just editMode with associated actions and in respective files both in client and native - begin transition to rely on userID from param props instead of direct props this is to decouple EditProfile from UserProfile -install react-devtools as a dev dependency - create a file tree structure to visualize app file hierarchy - LEFT OFF working on completing ShowPortfolioProjects state change on deletion/edit of a project, was not rerendering on deletion for some reason also working on making sure that user will only see 'edit' buttons if the redux user is in edit mode

--- a/native/package.json
+++ b/native/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "devtools": "react-devtools",
+    "start": "expo start --dev-client",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -36,7 +37,8 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-devtools": "^4.24.3"
   },
   "private": true
 }
