--- a/native/.gitignore
+++ b/native/.gitignore
@@ -1,5 +1,4 @@
 # OSX
-#
 .DS_Store
 
 # Xcode
@@ -36,6 +35,7 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
+.env
 
 # BUCK
 buck-out/
