--- a/native/package.json
+++ b/native/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.3.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-gifted-chat": "^1.0.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
