--- a/native/package.json
+++ b/native/package.json
@@ -10,33 +10,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.2.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
-    "expo": "~44.0.2",
-    "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
+    "dotenv": "^16.0.1",
+    "expo": "~45.0.0",
+    "expo-constants": "~13.1.1",
+    "expo-secure-store": "~11.2.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "firebase": "^9.6.11",
     "html-react-parser": "^1.4.8",
     "jwt-decode": "^3.1.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-screens": "~3.11.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-native-safe-area-context": "4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
