--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-testing-library": "^5.6.0",
     "html-react-parser": "^1.4.8",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.1",
