--- a/client/migration/package.json
+++ b/client/migration/package.json
@@ -7,7 +7,14 @@
     "ios": "expo run:ios",
     "devtools": "react-devtools",
     "start": "expo start --dev-client",
+    "test": "react-scripts test",
     "web": "expo start --web"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
@@ -17,8 +24,14 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.0",
+    "@testing-library/dom": "^8.16.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "dotenv": "^16.0.1",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-testing-library": "^5.6.0",
     "expo": "~45.0.0",
     "expo-constants": "~13.1.1",
     "expo-secure-store": "~11.2.0",
