--- a/native/package.json
+++ b/native/package.json
@@ -19,7 +19,7 @@
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "dotenv": "^16.0.1",
-    "expo": "~45.0.0",
+    "expo": "^46.0.2",
     "expo-constants": "~13.1.1",
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
@@ -34,13 +34,13 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "redux-persist": "^6.0.0",
-    "react-native-safe-area-context": "4.2.4"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
