--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/dom": "^8.16.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-testing-library": "^5.6.0",
     "html-react-parser": "^1.4.8",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.1",
@@ -17,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "sass": "^1.49.0",
     "web-vitals": "^2.1.3"
@@ -26,12 +29,6 @@
     "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -46,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "mini-css-extract-plugin": "2.4.5",
     "prettier": "^2.5.1"
   }
